--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 300px;
+  max-width: 290px;
   padding: 10px;
   border: 2px solid rgb(0, 0, 0);
   border-radius: 4px;
@@ -8,7 +8,6 @@
   justify-content: center;
   gap: 10px;
   margin-bottom: 20px;
-  margin-top: 20px;
 }
 
 .wrap {
@@ -22,16 +21,17 @@
   border: 1px solid gray;
   border-radius: 4px;
   padding: 0 10px;
-  width: 280px;
+  width: 268px;
 }
 
 .button {
   align-self: center;
-  width: 130px;
+  width: 160px;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 4px;
   background-color: rgb(246, 245, 238);
 }
-.errror {
+
+.error {
   color: red;
 }
