--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,6 +1,11 @@
 .container {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 10px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
 }
